# paper2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE_ACCESS_LINKS.md  GITHUB_SETUP_GUIDE.md  README.md  VSCODE_GITHUB_CONFIG.md  fix_yaml.py  pyproject.toml  requirements.txt
.ai/: checkpoint.json  ledger.json
configs/: algorithm_game_aware_pd_marl.yaml  benchmark_game_aware_smoke.yaml  benchmark_mainline_a_final_screening.yaml  benchmark_mainline_a_single_policy_3user_full17.yaml  benchmark_mainline_a_smoke.yaml  convergence_validation_matrix.yaml  default.yaml  formal_convergence_matrix.yaml  formal_single_variable_fixes.yaml  paper2_main_experiment_matrix.yaml  paper2_scenario_matrix.yaml  pricing_dynamic_mainline_a.yaml  scoring_profiles.yaml  stability_overrides.yaml  system_model_mainline_a.yaml
docs/: DOCS_SLIMMING_MANIFEST.md  README.md  architecture.md  codex-dispatch.md  convergence_event_audit.md  convergence_failure_analysis.md  convergence_plot_quality.md  convergence_publication_gate.md  formal_convergence_protocol.md  frontend_monitoring_integration.md  issues.md  l1_baseline_convergence_assessment.md  l2_candidate_convergence_report.md  legacy_convergence_retirement.md  mainline_a_compatibility_report.md  mainline_a_experiment_gate_review.md  mainline_a_experiment_protocol.md  mainline_a_final_algorithm_adaptation.md  mainline_a_n0_smoke_report.md  mainline_a_n1_oracle_report.md  mainline_a_n2_ablation_report.md  mainline_a_n3_ood_report.md  mainline_a_publication_gate.md  mec_improvements.md  mec_v3_game_theory.md  paper_revision_manifest.md  (+10 more)
(+399 files in other folders)
