[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpo-mec"
version = "0.2.0"
description = "GRPO for Multi-Edge Computing - RL Benchmark Framework"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "gymnasium>=0.29",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tensorboard>=2.13",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
grpo-benchmark = "scripts.benchmark:main"
grpo-plot = "scripts.plot_results:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["grpo_mec", "rl_algorithms", "src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--basetemp=pytest_temp -p no:cacheprovider"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
